# sntpc

./: .gitignore  .rustfmt.toml  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
examples/: README.md  simple_request.rs  smoltcp_request.rs  timesync.rs  tokio.rs
examples/embassy-net/: Cargo.toml  build.rs
examples/embassy-net-timeout/: Cargo.toml
examples/embassy-net-timeout/src/: main.rs
examples/embassy-net/ldscripts/: elf_aarch64.x  elf_x86_64.x
examples/embassy-net/src/: main.rs
examples/simple-no-std/: Cargo.toml  build.rs
examples/simple-no-std/.cargo/: config.toml
examples/simple-no-std/src/: main.rs
examples/simple-request/: Cargo.toml
examples/simple-request/src/: main.rs
examples/smoltcp-request/: Cargo.toml
examples/smoltcp-request/src/: main.rs
examples/timesync/: Cargo.toml
examples/timesync/src/: main.rs
examples/tokio/: Cargo.toml
examples/tokio/src/: main.rs
sntpc/: Cargo.toml  LICENSE-MIT  README.md
sntpc-net-embassy/: Cargo.toml  README.md
sntpc-net-embassy/src/: lib.rs
sntpc-net-std/: Cargo.toml  README.md
sntpc-net-std/src/: lib.rs
sntpc-net-tokio/: Cargo.toml  README.md
sntpc-net-tokio/src/: lib.rs
sntpc-time-embassy/: Cargo.toml  README.md
sntpc-time-embassy/src/: lib.rs
sntpc/benches/: async.rs  sync.rs
sntpc/src/: async_impl.rs  lib.rs  log.rs  socket.rs  types.rs  utils.rs
sntpc/src/socket/: embassy.rs  std.rs  tokio.rs
sntpc/src/utils/: mod.rs  unix.rs  windows.rs
sntpc/tests/: basic.rs  kiss_of_death.rs  net.rs  std_async.rs  std_sync.rs
sntpc/tests/helpers/: mod.rs
src/: async.rs  async_impl.rs  lib.rs  sup.rs  traits.rs  types.rs
src/utils/: mod.rs
src/utils/unix/: mod.rs
src/utils/windows/: mod.rs
xtask/: Cargo.toml  README.md
xtask/src/: commands.rs  lib.rs  main.rs  utils.rs
xtask/src/commands/: build.rs  check.rs  clean.rs  clippy.rs  format.rs  test.rs
xtask/src/utils/: cargo.rs  crates.rs  examples.rs  output.rs
