[workspace]
members = ["sntpc", "sntpc-net-*", "sntpc-time-*"]
exclude = ["examples", "xtask"]
resolver = "3"

[workspace.package]
version = "0.10.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Vladimir Petrigo <vladimir.petrigo@gmail.com>"]

[workspace.dependencies]
sntpc = { path = "./sntpc", version = "~0.11" }
