[package]
name = "sntpc-net-embassy"
version = "0.9.0"
description = "Embassy socket wrapper for sntpc library"
repository = "https://github.com/vpetrigo/sntpc"
categories = ["date-and-time", "no-std", "embedded", "asynchronous"]
keywords = ["sntp", "ntp", "sntp-client", "ntp-client"]

edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sntpc = { version = "~0.9", path = "../sntpc", default-features = false }
embassy-net = { version = ">=0.9, <0.10", default-features = false, features = ["udp", "proto-ipv4", "medium-ip"] }
embassy-time = { version = ">=0.5, <0.6", default-features = false }

cfg-if = { version = "1", optional = true }
log = { version = "~0.4", optional = true }
defmt = { version = "~1.1", optional = true }

[features]
ipv6 = ["embassy-net/proto-ipv6"]
log = ["dep:log", "dep:cfg-if"]
defmt = ["dep:defmt", "dep:cfg-if", "sntpc/defmt", "embassy-net/defmt"]
