[package]
name = "sntpc-net-tokio"
version = "1.0.0"
edition = "2024"
description = "Tokio socket wrapper for sntpc library"
repository = "https://github.com/vpetrigo/sntpc"
categories = ["date-and-time", "no-std", "embedded", "asynchronous"]
keywords = ["sntp", "ntp", "sntp-client", "ntp-client"]
license = "MIT OR Apache-2.0"
authors = ["Vladimir Petrigo <vladimir.petrigo@gmail.com>"]

[dependencies]
sntpc = { path = "../sntpc", version = "~0.8", default-features = false }
tokio = { version = ">=1, <2", default-features = false, features = ["net"] }
