[package]
name = "sntpc-time-embassy"
version = "0.5.0"
description = "Embassy timestamp generator for sntpc library"
repository = "https://github.com/vpetrigo/sntpc"
categories = ["date-and-time", "no-std", "embedded", "asynchronous"]
keywords = ["sntp", "ntp", "sntp-client", "ntp-client"]

edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sntpc = { version = "~0.11", path = "../sntpc", default-features = false }
embassy-time = { version = ">=0.5, <0.6", default-features = false }
