[package]
name = "sntpc"
version = "0.8.0"
description = "Library for making SNTP requests"
repository = "https://github.com/vpetrigo/sntpc"
categories = ["date-and-time", "no-std", "embedded", "asynchronous"]
keywords = ["sntp", "ntp", "sntp-client", "ntp-client"]
license = "MIT OR Apache-2.0"
authors = ["Vladimir Petrigo <vladimir.petrigo@gmail.com>"]
edition = "2024"
autoexamples = false

exclude = [
    ".*",
    "benches/"
]

[features]
default = ["std"]
std = []
sync = ["dep:miniloop"]
utils = ["std", "dep:chrono", "chrono/clock"]
log = ["dep:log"]

[dependencies]
log = { version = "~0.4", optional = true }
chrono = { version = "~0.4", default-features = false, optional = true }
miniloop = { version = "~0.4", optional = true }
defmt = { version = "~1.0", optional = true }
cfg-if = "~1"

[dev-dependencies]
miniloop = "~0.4"
criterion = "~0.7"
sntpc-net-std = { path = "../sntpc-net-std", version = "1" }

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
name = "sync"
harness = false
required-features = ["sync"]

[[bench]]
name = "async"
harness = false
