[package]
name = "example-simple-request"
version = "0.1.0"
edition = "2021"
publish = false

[features]
log = ["dep:simple_logger", "dep:log"]

[dependencies]
sntpc = { path = "../../sntpc", features = ["sync"] }
log = { version = "~0.4", optional = true }
simple_logger = { version = "~1.13", optional = true }
