[package]
name = "example-simple-request"
version = "0.2.0"
edition = "2021"
publish = false

[features]
log = ["dep:simple_logger", "dep:log", "sntpc/log"]

[dependencies]
sntpc = { path = "../../sntpc", features = ["sync"] }
log = { version = "~0.4", optional = true }
simple_logger = { version = "~5.1", optional = true }
