[package]
name = "example-simple-request"
version = "0.3.0"
edition = "2024"
publish = false

[features]
log = ["dep:simple_logger", "dep:log", "sntpc/log"]

[dependencies]
sntpc = { path = "../../sntpc", version = "~0.8", features = ["sync"] }
sntpc-net-std = { path = "../../sntpc-net-std", version = "1" }
log = { version = "~0.4", optional = true }
simple_logger = { version = "~5.1", optional = true }
