[package]
name = "example-smoltcp-request"
version = "0.2.0"
edition = "2021"
publish = false

[features]
log = ["dep:simple_logger", "dep:log", "sntpc/log"]

[dependencies]
sntpc = { path = "../../sntpc", features = ["sync"] }
clap = { version = "2.33", default-features = false }
log = { version = "~0.4", optional = true }
simple_logger = { version = "~5.1", optional = true }
smoltcp = { version = "~0.12", default-features = false, features = ["phy-tuntap_interface", "socket-udp", "proto-ipv4"] }
