[package]
name = "example-smoltcp-request"
version = "0.3.0"
edition = "2021"
publish = false

[dependencies]
sntpc = { path = "../../sntpc", features = ["sync", "log"] }
clap = { version = "2.33", default-features = false }
log = { version = "~0.4" }
simple_logger = { version = "~5.1" }
smoltcp = { version = "~0.12", default-features = false, features = ["phy-tuntap_interface", "socket-udp", "proto-ipv4"] }
