[package]
name = "example-timesync"
version = "0.2.0"
edition = "2021"
publish = false

[features]
log = ["dep:simple_logger", "dep:log", "sntpc/log"]

[dependencies]
sntpc = { path = "../../sntpc", default-features = false, features = ["utils", "sync"] }
clap = { version = "2.33", default-features = false }
simple_logger = { version = "~1.13", optional = true }
log = { version = "~0.4", optional = true }