[package]
name = "example-tokio"
version = "0.4.0"
edition = "2024"
publish = false

[dependencies]
sntpc = { path = "../../sntpc", version = "~0.9", features = ["std"] }
sntpc-net-tokio = { path = "../../sntpc-net-tokio", version = "1" }
tokio = { version = "1", features = ["rt", "net", "macros", "time"] }
